; ModuleID = '/home/carl/AnghaBench/redis/src/extr_evict.c_freeMemoryGetNotCountedMemory.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_evict.c_freeMemoryGetNotCountedMemory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i32, i32 }

@server = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@AOF_OFF = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @freeMemoryGetNotCountedMemory() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i64 0, i64* %1, align 8
  %6 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 2), align 4
  %7 = call i32 @listLength(i32 %6)
  store i32 %7, i32* %2, align 4
  %8 = load i32, i32* %2, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %24

10:                                               ; preds = %0
  %11 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 2), align 4
  %12 = call i32 @listRewind(i32 %11, i32* %3)
  br label %13

13:                                               ; preds = %16, %10
  %14 = call i32* @listNext(i32* %3)
  store i32* %14, i32** %4, align 8
  %15 = icmp ne i32* %14, null
  br i1 %15, label %16, label %23

16:                                               ; preds = %13
  %17 = load i32*, i32** %4, align 8
  %18 = call i32* @listNodeValue(i32* %17)
  store i32* %18, i32** %5, align 8
  %19 = load i32*, i32** %5, align 8
  %20 = call i64 @getClientOutputBufferMemoryUsage(i32* %19)
  %21 = load i64, i64* %1, align 8
  %22 = add i64 %21, %20
  store i64 %22, i64* %1, align 8
  br label %13

23:                                               ; preds = %13
  br label %24

24:                                               ; preds = %23, %0
  %25 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 0), align 8
  %26 = load i64, i64* @AOF_OFF, align 8
  %27 = icmp ne i64 %25, %26
  br i1 %27, label %28, label %35

28:                                               ; preds = %24
  %29 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @server, i32 0, i32 1), align 8
  %30 = call i64 @sdsalloc(i32 %29)
  %31 = call i64 (...) @aofRewriteBufferSize()
  %32 = add nsw i64 %30, %31
  %33 = load i64, i64* %1, align 8
  %34 = add i64 %33, %32
  store i64 %34, i64* %1, align 8
  br label %35

35:                                               ; preds = %28, %24
  %36 = load i64, i64* %1, align 8
  ret i64 %36
}

declare dso_local i32 @listLength(i32) #1

declare dso_local i32 @listRewind(i32, i32*) #1

declare dso_local i32* @listNext(i32*) #1

declare dso_local i32* @listNodeValue(i32*) #1

declare dso_local i64 @getClientOutputBufferMemoryUsage(i32*) #1

declare dso_local i64 @sdsalloc(i32) #1

declare dso_local i64 @aofRewriteBufferSize(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
